--- a/sass/layout/_projects.scss
+++ b/sass/layout/_projects.scss
@@ -13,6 +13,10 @@
     margin-bottom: 5rem;
     color: $black-1;
     position: relative;
+
+    @media only screen and (max-width: $sm) {
+      font-size: 5rem;
+    }
   }
 
   &__border {
@@ -34,6 +38,11 @@
     position: relative;
     min-height: 80vh;
 
+    @media only screen and (max-width: $lg) {
+      position: static;
+      display: flex;
+    }
+
     &__title {
       margin-top: 15%;
       color: $black-1;
@@ -53,12 +62,28 @@
       color: $grey-1;
       padding-left: 6%;
 
+      @media only screen and (max-width: $sm) {
+        padding-left: 0;
+        padding-right: 0;
+      }
+
+      @media only screen and (max-width: $lg) {
+        padding-left: 5rem;
+        padding-right: 5rem;
+        width: 100%;
+        margin-top: 25%;
+      }
+
       span {
         width: 100%;
         background: $purple-1;
         display: block;
         height: 0.5rem;
         margin-top: 2rem;
+
+        @media only screen and (max-width: $lg) {
+          width: 80%;
+        }
       }
 
       .btn {
@@ -69,18 +94,32 @@
     img {
       position: absolute;
       margin-top: 4rem;
+
+      @media only screen and (max-width: $lg) {
+        position: static;
+        width: 100%;
+      }
     }
 
     &__img1 {
       width: 40%;
       right: 3%;
       top: 15%;
+      z-index: -999;
+
+      @media only screen and (max-width: $lg) {
+        object-fit: cover;
+      }
     }
 
     &__img2 {
       width: 25%;
       right: 41%;
       top: 78%;
+
+      @media only screen and (max-width: $lg) {
+        display: none;
+      }
     }
 
     &__box {
@@ -93,6 +132,10 @@
       left: 0;
       bottom: 0;
       right: 5%;
+
+      @media only screen and (max-width: $lg) {
+        display: none;
+      }
     }
   }
 
@@ -106,6 +149,11 @@
     position: relative;
     min-height: 80vh;
 
+    @media only screen and (max-width: $lg) {
+      position: static;
+      display: flex;
+    }
+
     &__title {
       margin-top: 15%;
       color: $black-1;
@@ -114,6 +162,11 @@
       font-size: 3rem;
       font-weight: 700;
       left: 62%;
+
+      @media only screen and (max-width: $lg) {
+        padding-left: 6%;
+        left: 0;
+      }
     }
 
     &__description {
@@ -127,12 +180,30 @@
       color: $grey-1;
       padding-left: 8rem;
 
+      @media only screen and (max-width: $sm) {
+        padding-left: 0;
+        padding-right: 0;
+      }
+
+      @media only screen and (max-width: $lg) {
+        padding-left: 5rem;
+        padding-right: 5rem;
+        width: 100%;
+        margin-top: 25%;
+        padding-left: 6%;
+        left: 0;
+      }
+
       span {
         width: 100%;
         background: $purple-1;
         display: block;
         height: 0.5rem;
         margin-top: 2rem;
+
+        @media only screen and (max-width: $lg) {
+          width: 80%;
+        }
       }
 
       .btn {
@@ -143,18 +214,31 @@
     img {
       position: absolute;
       margin-top: 4rem;
+
+      @media only screen and (max-width: $lg) {
+        position: static;
+        width: 100%;
+      }
     }
 
     &__img1 {
       width: 40%;
       left: 3%;
       top: 15%;
+
+      @media only screen and (max-width: $lg) {
+        object-fit: cover;
+      }
     }
 
     &__img2 {
       width: 25%;
       left: 41%;
       top: 78%;
+
+      @media only screen and (max-width: $lg) {
+        display: none;
+      }
     }
 
     &__box {
@@ -166,6 +250,10 @@
       top: 43%;
       left: 48%;
       bottom: 0;
+
+      @media only screen and (max-width: $lg) {
+        display: none;
+      }
     }
   }
 
@@ -176,11 +264,23 @@
     display: flex;
     justify-content: center;
 
+    @media only screen and (max-width: $lg) {
+      margin-top: 8rem;
+    }
+
     // table {
     //   margin: 0;
     //   padding: 0;
     //   visibility: hidden;
     // }
+
+    tr {
+      td {
+        @media only screen and (max-width: $lg) {
+          display: block;
+        }
+      }
+    }
 
     .title {
       text-align: center;
