--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,8 @@
   box-sizing: border-box; }
 
 html {
-  font-size: 62.5%; }
+  font-size: 62.5%;
+  overflow-x: hidden; }
 
 body {
   font-family: 'telegraf', sans-serif;
@@ -117,16 +118,31 @@ img {
 .about {
   margin-top: 4rem;
   padding-bottom: 15rem; }
+  @media only screen and (max-width: 768px) {
+    .about {
+      margin-top: -15rem; } }
   .about__container {
     padding-left: 25rem;
     padding-right: 25rem;
     display: flex;
     align-items: center;
     justify-content: center; }
+    @media only screen and (max-width: 992px) {
+      .about__container {
+        display: flex;
+        flex-direction: column;
+        padding-left: 0;
+        padding-right: 0; } }
     .about__container .profile-img {
       margin-right: 5rem;
       min-width: 20rem;
       position: relative; }
+      @media only screen and (max-width: 992px) {
+        .about__container .profile-img {
+          max-width: 15rem;
+          margin-bottom: 10rem;
+          margin-left: auto;
+          margin-right: auto; } }
       .about__container .profile-img::after {
         content: '';
         display: inline-block;
@@ -138,6 +154,11 @@ img {
         height: 20rem;
         background-color: transparent;
         z-index: -9; }
+    @media only screen and (max-width: 992px) {
+      .about__container .profile-details {
+        padding-left: 5rem;
+        padding-right: 5rem;
+        text-align: justify; } }
     .about__container .profile-details .heading {
       text-align: center;
       line-height: 0;
@@ -148,13 +169,29 @@ img {
       .about__container .profile-details .heading h6 {
         font-size: 2rem;
         font-weight: 300; }
+    @media only screen and (max-width: 576px) {
+      .about__container .profile-details {
+        font-size: 1.7rem; } }
     .about__container .profile-details .description {
       flex: 1;
       font-size: 1.9rem;
       font-weight: 400;
-      color: #3f3f3f; }
+      color: #3f3f3f;
+      min-width: 50rem;
+      text-align: justify; }
+      @media only screen and (max-width: 576px) {
+        .about__container .profile-details .description {
+          padding-left: 0;
+          padding-right: 0; } }
+      @media only screen and (max-width: 992px) {
+        .about__container .profile-details .description {
+          padding-left: 5rem;
+          padding-right: 5rem; } }
     .about__container .profile-details .social-media .nav-items {
       display: flex; }
+      @media only screen and (max-width: 992px) {
+        .about__container .profile-details .social-media .nav-items {
+          justify-content: center; } }
     .about__container .profile-details .social-media .nav-links {
       display: flex;
       list-style: none;
@@ -276,9 +313,12 @@ img {
           flex-direction: column; }
           @media only screen and (max-width: 576px) {
             .contact__container .screen-body .left {
-              margin-bottom: 3rem; } }
+              margin-bottom: 0; } }
         .contact__container .screen-body .app-form {
           margin-top: 4rem; }
+          @media only screen and (max-width: 576px) {
+            .contact__container .screen-body .app-form {
+              margin-top: 0; } }
           .contact__container .screen-body .app-form-group {
             margin-bottom: 1.5rem; }
             .contact__container .screen-body .app-form-group__control {
@@ -347,26 +387,51 @@ img {
 
 .header {
   min-height: 100vh; }
+  @media only screen and (max-width: 992px) {
+    .header {
+      margin-left: 15rem;
+      margin-right: 15rem;
+      line-height: 1.3; } }
 
 .hero__heading {
   margin-top: 20rem; }
+  @media only screen and (max-width: 768px) {
+    .hero__heading {
+      font-size: 9rem;
+      padding: 0 30rem;
+      margin-left: auto;
+      margin-right: auto; } }
   .hero__heading .heading-main {
     font-size: 10rem;
     letter-spacing: 0.2rem;
     font-weight: 800;
     color: #7d31ea;
     animation: moveInRight 0.9s ease-out; }
+    @media only screen and (max-width: 768px) {
+      .hero__heading .heading-main {
+        line-height: 1;
+        margin-top: 1.5rem;
+        margin-bottom: 1.5rem; } }
+    @media only screen and (max-width: 576px) {
+      .hero__heading .heading-main {
+        font-size: 7.5rem; } }
   .hero__heading .heading-sub {
     font-size: 3rem;
     font-weight: 600;
     color: #272729;
     animation: moveInLeft 0.9s ease-out; }
+    @media only screen and (max-width: 576px) {
+      .hero__heading .heading-sub {
+        font-size: 3rem; } }
     .hero__heading .heading-sub span {
       color: #7d31ea; }
   .hero__heading .heading-small {
     font-size: 2rem;
     font-weight: 600;
     animation: moveInLeft 0.9s ease-out; }
+    @media only screen and (max-width: 576px) {
+      .hero__heading .heading-small {
+        font-size: 1.8rem; } }
 
 .hero {
   background-color: white;
@@ -507,6 +572,9 @@ img {
     margin-bottom: 5rem;
     color: #272729;
     position: relative; }
+    @media only screen and (max-width: 576px) {
+      .projects__heading {
+        font-size: 5rem; } }
   .projects__border {
     position: absolute;
     width: 20%;
@@ -520,6 +588,10 @@ img {
   .projects .right-slide {
     position: relative;
     min-height: 80vh; }
+    @media only screen and (max-width: 992px) {
+      .projects .right-slide {
+        position: static;
+        display: flex; } }
     .projects .right-slide__title {
       margin-top: 15%;
       color: #272729;
@@ -536,25 +608,49 @@ img {
       position: absolute;
       color: #3f3f3f;
       padding-left: 6%; }
+      @media only screen and (max-width: 576px) {
+        .projects .right-slide__description {
+          padding-left: 0;
+          padding-right: 0; } }
+      @media only screen and (max-width: 992px) {
+        .projects .right-slide__description {
+          padding-left: 5rem;
+          padding-right: 5rem;
+          width: 100%;
+          margin-top: 25%; } }
       .projects .right-slide__description span {
         width: 100%;
         background: #7d31ea;
         display: block;
         height: 0.5rem;
         margin-top: 2rem; }
+        @media only screen and (max-width: 992px) {
+          .projects .right-slide__description span {
+            width: 80%; } }
       .projects .right-slide__description .btn {
         margin-right: 2rem; }
     .projects .right-slide img {
       position: absolute;
       margin-top: 4rem; }
+      @media only screen and (max-width: 992px) {
+        .projects .right-slide img {
+          position: static;
+          width: 100%; } }
     .projects .right-slide__img1 {
       width: 40%;
       right: 3%;
-      top: 15%; }
+      top: 15%;
+      z-index: -999; }
+      @media only screen and (max-width: 992px) {
+        .projects .right-slide__img1 {
+          object-fit: cover; } }
     .projects .right-slide__img2 {
       width: 25%;
       right: 41%;
       top: 78%; }
+      @media only screen and (max-width: 992px) {
+        .projects .right-slide__img2 {
+          display: none; } }
     .projects .right-slide__box {
       width: 12rem;
       height: 12rem;
@@ -565,12 +661,19 @@ img {
       left: 0;
       bottom: 0;
       right: 5%; }
+      @media only screen and (max-width: 992px) {
+        .projects .right-slide__box {
+          display: none; } }
   .projects .project-2 {
     min-height: 100vh;
     margin-top: 12rem; }
   .projects .left-slide {
     position: relative;
     min-height: 80vh; }
+    @media only screen and (max-width: 992px) {
+      .projects .left-slide {
+        position: static;
+        display: flex; } }
     .projects .left-slide__title {
       margin-top: 15%;
       color: #272729;
@@ -579,6 +682,10 @@ img {
       font-size: 3rem;
       font-weight: 700;
       left: 62%; }
+      @media only screen and (max-width: 992px) {
+        .projects .left-slide__title {
+          padding-left: 6%;
+          left: 0; } }
     .projects .left-slide__description {
       font-size: 1.9rem;
       font-weight: 400;
@@ -589,25 +696,50 @@ img {
       position: absolute;
       color: #3f3f3f;
       padding-left: 8rem; }
+      @media only screen and (max-width: 576px) {
+        .projects .left-slide__description {
+          padding-left: 0;
+          padding-right: 0; } }
+      @media only screen and (max-width: 992px) {
+        .projects .left-slide__description {
+          padding-left: 5rem;
+          padding-right: 5rem;
+          width: 100%;
+          margin-top: 25%;
+          padding-left: 6%;
+          left: 0; } }
       .projects .left-slide__description span {
         width: 100%;
         background: #7d31ea;
         display: block;
         height: 0.5rem;
         margin-top: 2rem; }
+        @media only screen and (max-width: 992px) {
+          .projects .left-slide__description span {
+            width: 80%; } }
       .projects .left-slide__description .btn {
         margin-right: 2rem; }
     .projects .left-slide img {
       position: absolute;
       margin-top: 4rem; }
+      @media only screen and (max-width: 992px) {
+        .projects .left-slide img {
+          position: static;
+          width: 100%; } }
     .projects .left-slide__img1 {
       width: 40%;
       left: 3%;
       top: 15%; }
+      @media only screen and (max-width: 992px) {
+        .projects .left-slide__img1 {
+          object-fit: cover; } }
     .projects .left-slide__img2 {
       width: 25%;
       left: 41%;
       top: 78%; }
+      @media only screen and (max-width: 992px) {
+        .projects .left-slide__img2 {
+          display: none; } }
     .projects .left-slide__box {
       width: 12rem;
       height: 12rem;
@@ -617,10 +749,19 @@ img {
       top: 43%;
       left: 48%;
       bottom: 0; }
+      @media only screen and (max-width: 992px) {
+        .projects .left-slide__box {
+          display: none; } }
   .projects .all-projects {
     margin-top: 18rem;
     display: flex;
     justify-content: center; }
+    @media only screen and (max-width: 992px) {
+      .projects .all-projects {
+        margin-top: 8rem; } }
+    @media only screen and (max-width: 992px) {
+      .projects .all-projects tr td {
+        display: block; } }
     .projects .all-projects .title {
       text-align: center;
       margin-bottom: 0.5rem; }
@@ -763,8 +904,12 @@ img {
 .skills {
   padding-top: 10rem;
   padding-bottom: 20rem;
-  padding-left: 20rem;
-  padding-right: 20rem; }
+  padding-left: 16rem;
+  padding-right: 16rem; }
+  @media only screen and (max-width: 1200px) {
+    .skills {
+      padding-left: 0;
+      padding-right: 0; } }
   .skills__heading {
     font-family: "telegraf", "sans-serif";
     font-weight: 700;
@@ -773,7 +918,11 @@ img {
     text-align: center;
     margin-bottom: 5rem;
     color: #272729;
-    position: relative; }
+    position: relative;
+    margin-bottom: 7rem; }
+    @media only screen and (max-width: 576px) {
+      .skills__heading {
+        font-size: 5rem; } }
     .skills__heading .border {
       position: absolute;
       width: 20%;
@@ -782,6 +931,9 @@ img {
       left: 50%;
       transform: translateX(-50%);
       background-color: #7d31ea; }
+      @media only screen and (max-width: 576px) {
+        .skills__heading .border {
+          width: 30%; } }
   .skills__description {
     font-size: 1.9rem;
     font-weight: 400;
@@ -789,6 +941,15 @@ img {
     padding-left: 15rem;
     padding-right: 15rem;
     min-width: 60rem; }
+    @media only screen and (max-width: 1200px) {
+      .skills__description {
+        min-width: 20rem;
+        padding-left: 1rem;
+        padding-right: 1rem;
+        margin-left: 3.5rem;
+        margin-right: 3.5rem;
+        text-align: justify;
+        display: flex; } }
   .skills__container {
     display: flex;
     justify-content: space-evenly;
@@ -797,3 +958,7 @@ img {
       display: flex;
       height: 6rem;
       width: 6rem; }
+      @media only screen and (max-width: 576px) {
+        .skills__container .icon {
+          height: 5.1rem;
+          width: 5.1rem; } }
